--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/CharlesMickey/movies-explorer-api#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "celebrate": "^15.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "validator": "^13.6.0"
   },
